--- a/app/assets/stylesheets/template/responsive.css.scss
+++ b/app/assets/stylesheets/template/responsive.css.scss
@@ -1074,7 +1074,7 @@ and (orientation : portrait) {
 		}
 		
 		.scrollup{
-			background: image-url('pullup2x.png'); 
+			background: image-url('pullup@2x.png'); 
 			background-size: 57px 27px;
 		}
 		
