--- a/app/assets/stylesheets/template/style.css.scss
+++ b/app/assets/stylesheets/template/style.css.scss
@@ -1675,6 +1675,16 @@ blockquote.pull-right small:after {
 }
 .logo {
   margin: 18px 14px;
+  width: 106px;
+  height: 21px;
+}
+.profile-image{
+  width: 35px;
+  height: 35px;
+}
+.avatar{
+  width: 69px;
+  height: 69px;
 }
 .normal {
   font-weight: normal;
