changed icon for cars tab

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -190,7 +190,7 @@
 			<!-- BEGIN SELECTED LINK -->
 			<li class="">
 				<a href="<%= cars_path %>" >
-					<%= fa_icon "location-arrow" %>
+					<%= fa_icon "truck" %>
 					<span class="title">Cars</span>
 				</a>
 			</li>
