--- a/app/views/device_models/index.html.haml
+++ b/app/views/device_models/index.html.haml
@@ -1,4 +1,3 @@
-%h1 Listing Device Models
 
 = search_form_for @q, :class => "form-inline" do |f| 
   = f.search_field :name_cont, :placeholder => "search with name" 
@@ -13,24 +12,38 @@
 
 %br
 
-%table.table
-  %tr
-    = content_tag :th, sort_link(@q, :name)
-    = content_tag :th, sort_link(@q, 'Device Manufacturer')
-    = content_tag :th, sort_link(@q, :protocol)
-    %th
-    %th
-    %th
-
-  - @device_models.each do |device_model|
-    %tr
-      %td= device_model.name
-      %td= device_model.device_manufacturer.name
-      %td= device_model.protocol
-      %td= link_to 'Show', device_model
-      %td= link_to 'Edit', edit_device_model_path(device_model)
-      %td= link_to 'Destroy', device_model, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Device models
+        %table.table.no-more-tables
+          %thead
+            %tr
+              = content_tag :th, sort_link(@q, :name)
+              = content_tag :th, sort_link(@q, 'Device Manufacturer')
+              = content_tag :th, sort_link(@q, :protocol)
+              %th
+              %th
+              %th
+          %tbody
+            
+            - @device_models.each do |device_model|
+              %tr
+                %td= device_model.name
+                %td= device_model.device_manufacturer.name
+                %td= device_model.protocol
+                %td= link_to 'Show', device_model
+                %td= link_to 'Edit', edit_device_model_path(device_model)
+                %td= link_to 'Destroy', device_model, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
 
 = link_to 'New Device model', new_device_model_path
