--- a/app/views/device_types/index.html.haml
+++ b/app/views/device_types/index.html.haml
@@ -1,4 +1,3 @@
-%h1 Listing Device Types
 
 = search_form_for @q, :class => "form-inline" do |f| 
   = f.search_field :name_cont, :placeholder => "Search with name" 
@@ -6,20 +5,35 @@
 
 %br
 
-%table.table
-  %tr
-    = content_tag :th, sort_link(@q, :name)
-    %th
-    %th
-    %th
-
-  - @device_types.each do |device_type|
-    %tr
-      %td= device_type.name
-      %td= link_to 'Show', device_type
-      %td= link_to 'Edit', edit_device_type_path(device_type)
-      %td= link_to 'Destroy', device_type, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Device types
+        %table.table.no-more-tables
+          %thead
+            %tr
+              = content_tag :th, sort_link(@q, :name)
+              %th
+              %th
+              %th
+          %tbody
+            
+            - @device_types.each do |device_type|
+              %tr
+                %td= device_type.name
+                %td= link_to 'Show', device_type
+                %td= link_to 'Edit', edit_device_type_path(device_type)
+                %td= link_to 'Destroy', device_type, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
+
 
 = link_to 'New Device type', new_device_type_path
