--- a/app/views/devices/index.html.haml
+++ b/app/views/devices/index.html.haml
@@ -1,4 +1,3 @@
-%h1 Listing devices
 
 = search_form_for @q do |f| 
   = f.search_field :name_cont, :placeholder => "Search with name"
@@ -39,22 +38,37 @@
 
 %br
 
-%table.table
-  %tr
-    = content_tag :th, sort_link(@q, :name)
-    = content_tag :th, sort_link(@q, :emei)
-    = content_tag :th, sort_link(@q, :cost_price)
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Devices
+        %table.table.no-more-tables
+          %thead
+            %tr
+              = content_tag :th, sort_link(@q, :name)
+              = content_tag :th, sort_link(@q, :emei)
+              = content_tag :th, sort_link(@q, :cost_price)
 
-
-  - @devices.each do |device|
-    %tr
-      %td= device.name
-      %td= device.emei
-      %td= device.cost_price
-      %td= link_to 'Show', device
-      %td= link_to 'Edit', edit_device_path(device)
-      %td= link_to 'Destroy', device, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
+          %tbody
+            
+            - @devices.each do |device|
+              %tr
+                %td= device.name
+                %td= device.emei
+                %td= device.cost_price
+                %td= link_to 'Show', device
+                %td= link_to 'Edit', edit_device_path(device)
+                %td= link_to 'Destroy', device, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
+
 
 = link_to 'New Device', new_device_path
