--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,4 +1,3 @@
-%h1 Listing groups
 
 = search_form_for @q, :class => "form-inline" do |f| 
   = f.search_field :name_cont, :placeholder => "Search with name" 
@@ -6,18 +5,35 @@
 
 %br
 
-%table.table
-  %tr
-    = content_tag :th, sort_link(@q, :name)
-    %th
-    %th
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Groups
+        %table.table.no-more-tables
+          %thead
+            %tr
+              = content_tag :th, sort_link(@q, :name)
+              %th
+              %th
 
-  - @groups.each do |group|
-    %tr
-      %td= link_to group.name, group
-      %td= link_to 'Edit', edit_group_path(group)
-      %td= link_to 'Destroy', group, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %tbody
+            
+            - @groups.each do |group|
+              %tr
+                %td= link_to group.name, group
+                %td= link_to 'Edit', edit_group_path(group)
+                %td= link_to 'Destroy', group, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
+
 
 = link_to 'New Group', new_group_path
