--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -1,19 +1,34 @@
-%h1 Listing plans
 
-%table
-  %tr
-    %th Name
-    %th
-    %th
-    %th
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Plans
+        %table.table.no-more-tables
+          %thead
+            %tr
+              %th Name
+              %th
+              %th
+              %th
 
-  - @plans.each do |plan|
-    %tr
-      %td= plan.name
-      %td= link_to 'Show', plan
-      %td= link_to 'Edit', edit_plan_path(plan)
-      %td= link_to 'Destroy', plan, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %tbody           
+            - @plans.each do |plan|
+              %tr
+                %td= plan.name
+                %td= link_to 'Show', plan
+                %td= link_to 'Edit', edit_plan_path(plan)
+                %td= link_to 'Destroy', plan, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
+
 
 = link_to 'New Plan', new_plan_path
