--- a/app/views/regions/index.html.haml
+++ b/app/views/regions/index.html.haml
@@ -1,19 +1,34 @@
-%h1 Listing regions
 
-%table.table
-  %tr
-    %th Name
-    %th
-    %th
-    %th
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Regions
+        %table.table.no-more-tables
+          %thead
+            %tr
+              %th Name
+              %th
+              %th
+              %th
 
-  - @regions.each do |region|
-    %tr
-      %td= region.name
-      %td= link_to 'Show', region
-      %td= link_to 'Edit', edit_region_path(region)
-      %td= link_to 'Destroy', region, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %tbody           
+            - @regions.each do |region|
+              %tr
+                %td= region.name
+                %td= link_to 'Show', region
+                %td= link_to 'Edit', edit_region_path(region)
+                %td= link_to 'Destroy', region, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
+
 
 = link_to 'New Region', new_region_path
