--- a/app/views/rules/index.html.haml
+++ b/app/views/rules/index.html.haml
@@ -1,23 +1,38 @@
-%h1 Listing rules
 
-%table.table
-	%tr
-		%th Name
-		%th Method name
-		%th Number of params
-		%th
-		%th
-		%th
+.row
+  .col-md-12
+	.grid.simple
+	  .grid-title.no-border
+		%h4
+		  &nbsp;
+		.tools
+		  %a.collapse{href: "javascript:;"}
+		  %a.config{"data-toggle" => "modal", href: "#grid-config"}
+		  %a.reload{href: "javascript:;"}
+	  .grid-body.no-border
+		%h3
+		  Rules
+		%table.table.no-more-tables
+		  %thead
+			%tr
+				%th Name
+				%th Method name
+				%th Number of params
+				%th
+				%th
+				%th
 
-	- @rules.each do |rule|
-		%tr
-			%td= rule.name
-			%td= rule.method_name
-			%td= rule.params.count
-			%td= link_to 'Show', rule
-			%td= link_to 'Edit', edit_rule_path(rule)
-			%td= link_to 'Destroy', rule, :method => :delete, :data => { :confirm => 'Are you sure?' }
+		  %tbody           
+			- @rules.each do |rule|
+			  %tr
+				%td= rule.name
+				%td= rule.method_name
+				%td= rule.params.count
+				%td= link_to 'Show', rule
+				%td= link_to 'Edit', edit_rule_path(rule)
+				%td= link_to 'Destroy', rule, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
+
 
 = link_to 'New Rule', new_rule_path
