--- a/app/views/simcards/index.html.haml
+++ b/app/views/simcards/index.html.haml
@@ -1,4 +1,3 @@
-%h1 Listing simcards
 
 = search_form_for @q, :class => "form-inline" do |f| 
   = f.search_field :telephone_number_cont, :placeholder => "Search with telephone number" 
@@ -25,27 +24,42 @@
 
 %br
 
-%table.table
-  %tr
-    = content_tag :th, sort_link(@q, :telephone_number)
-    = content_tag :th, sort_link(@q, 'Teleprovider name')
-    = content_tag :th, sort_link(@q, :monthly_price)
-    %th
-    %th
-    %th
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Simcards
+        %table.table.no-more-tables
+          %thead
+            %tr
+              = content_tag :th, sort_link(@q, :telephone_number)
+              = content_tag :th, sort_link(@q, 'Teleprovider name')
+              = content_tag :th, sort_link(@q, :monthly_price)
+              %th
+              %th
+              %th
 
-  - @simcards.each do |simcard|
-    %tr
-      %td= simcard.telephone_number
-      %td= simcard.teleprovider.name
-      %td= simcard.monthly_price
-      - if simcard.device
-        %td= link_to simcard.device.name, simcard.device
-      - else 
-        %td= "No device"
-      %td= link_to 'Show', simcard
-      %td= link_to 'Edit', edit_simcard_path(simcard)
-      %td= link_to 'Destroy', simcard, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %tbody           
+            - @simcards.each do |simcard|
+              %tr
+                %td= simcard.telephone_number
+                %td= simcard.teleprovider.name
+                %td= simcard.monthly_price
+                - if simcard.device
+                  %td= link_to simcard.device.name, simcard.device
+                - else 
+                  %td= "No device"
+                %td= link_to 'Show', simcard
+                %td= link_to 'Edit', edit_simcard_path(simcard)
+                %td= link_to 'Destroy', simcard, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
