--- a/app/views/teleproviders/index.html.haml
+++ b/app/views/teleproviders/index.html.haml
@@ -1,4 +1,3 @@
-%h1 Listing teleproviders
 
 = search_form_for @q, :class => "form-inline" do |f| 
   = f.search_field :name_cont, :placeholder => "Search with name" 
@@ -6,22 +5,38 @@
 
 %br
 
-%table.table
-  %tr
-    = content_tag :th, sort_link(@q, :name)
-    = content_tag :th, sort_link(@q, :apn)
-    %th
-    %th
-    %th
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Teleproviders
+        %table.table.no-more-tables
+          %thead
+            %tr
+              = content_tag :th, sort_link(@q, :name)
+              = content_tag :th, sort_link(@q, :apn)
+              %th
+              %th
+              %th
 
-  - @teleproviders.each do |teleprovider|
-    %tr
-      %td= teleprovider.name
-      %td= teleprovider.apn
-      %td= link_to 'Show', teleprovider
-      %td= link_to 'Edit', edit_teleprovider_path(teleprovider)
-      %td= link_to 'Destroy', teleprovider, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %tbody           
+            - @teleproviders.each do |teleprovider|
+              %tr
+                %td= teleprovider.name
+                %td= teleprovider.apn
+                %td= link_to 'Show', teleprovider
+                %td= link_to 'Edit', edit_teleprovider_path(teleprovider)
+                %td= link_to 'Destroy', teleprovider, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
+
 
 = link_to 'New Teleprovider', new_teleprovider_path
