--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,4 +1,3 @@
-%h1 Listing users
 
 = search_form_for @q do |f| 
   = f.search_field :email_cont, :placeholder => "Search with email"
@@ -17,20 +16,37 @@
 
 %br
 
-%table.table
-  %tr
-    = content_tag :th, sort_link(@q, :name)
-    = content_tag :th, sort_link(@q, :email)
-    %th
-    %th
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          &nbsp;
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+      .grid-body.no-border
+        %h3
+          Users
+        %table.table.no-more-tables
+          %thead
+            %tr
+              = content_tag :th, sort_link(@q, :name)
+              = content_tag :th, sort_link(@q, :email)
+              %th
+              %th
 
-  - @users.each do |user|
-    %tr
-      %td= link_to user.name, user
-      %td= user.email
-      %td= link_to 'Edit', edit_user_path(user)
-      %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
+          %tbody           
+            - @users.each do |user|
+              %tr
+                %td= link_to user.name, user
+                %td= user.email
+                %td= link_to 'Edit', edit_user_path(user)
+                %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
+
+
 
 = link_to 'Invite user', new_user_invitation_path
