added link to plans administration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -237,6 +237,7 @@
 						</ul>
 					</li>
 					<li><%= link_to "Rules", rules_path %></li>
+					<li><%= link_to "Plans", plans_path %></li>
 				</ul>
 			</li>
 			<% end %>
