--- a/app/views/plans/_form.html.haml
+++ b/app/views/plans/_form.html.haml
@@ -6,21 +6,21 @@
         - @plan.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
+  .form-group
+    = f.label :name, :class => "form-label"
+    = f.text_field :name, :class => "form-control"
 
+  .form-group
+    %h4 Pricing
+    #pricings
+    = f.fields_for :pricings do |pricing|
+      = render 'pricing_fields', :f => pricing
+    .links
+      = link_to_add_association 'add pricing', f, :pricings
 
-  %h3 Pricing
+  .form-group
+    %h4 Features
+    = f.select :feature_ids, Feature.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
 
-  #pricings
-  = f.fields_for :pricings do |pricing|
-    = render 'pricing_fields', :f => pricing
-  .links
-    = link_to_add_association 'add pricing', f, :pricings
-
-  %h2 Features
-  = f.select :feature_ids, Feature.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
-
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
