--- a/app/views/plans/_pricing_fields.html.haml
+++ b/app/views/plans/_pricing_fields.html.haml
@@ -1,16 +1,13 @@
 .nested-fields
-	.field
-		= f.label :name
-		%br
-		= f.text_field :name
-	.field
-		= f.label :billable_days
-		%br
-		= f.text_field :billable_days
+	.form-group
+		= f.label :name, :class => ".form-label"
+		= f.text_field :name, :class => "form-control"
+	.form-group
+		= f.label :billable_days, :class => ".form-label"
+		= f.text_field :billable_days, :class => "form-control"
 
-	.field
-		= f.label :amount
-		%br
-		= f.text_field :amount
+	.form-group
+		= f.label :amount, :class => ".form-label"
+		= f.text_field :amount, :class => "form-control"
 
 	= link_to_remove_association "remove pricing", f
